# OpenProteo

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  README.md  RELEASING.md  SECURITY.md  STACK.md  STRATEGY.md
.github/workflows/: audit.yml  ci.yml  publish.yml  release.yml  wheels.yml
crates/openmassspec-io/: Cargo.toml
crates/openmassspec-io-cli/: Cargo.toml
crates/openmassspec-io-cli/src/: main.rs  mzml_reader.rs
crates/openmassspec-io-cli/tests/: cli_centroid.rs  cli_validate.rs
crates/openmassspec-io-py/: Cargo.toml  README.md  pyproject.toml
crates/openmassspec-io-py/python/openmassspec_io/: __init__.py
crates/openmassspec-io-py/src/: lib.rs
crates/openmassspec-io-py/tests/: test_smoke.py
crates/openmassspec-io/src/: error.rs  lib.rs
crates/openmassspec-io/tests/: vendor2mzml.rs
crates/openproteo-io/: Cargo.toml
crates/openproteo-io-cli/: Cargo.toml
crates/openproteo-io-cli/src/: main.rs  mzml_reader.rs
crates/openproteo-io-cli/tests/: cli_validate.rs
crates/openproteo-io-py/: Cargo.toml  pyproject.toml
crates/openproteo-io-py/python/openproteo_io/: __init__.py
crates/openproteo-io-py/src/: lib.rs
crates/openproteo-io-py/tests/: test_smoke.py
crates/openproteo-io/src/: lib.rs
crates/openproteo-io/tests/: vendor2mzml.rs
docs/: .gitignore  CORPUS.md  README.md  RELEASE.md  book.toml  docusaurus.config.ts  package.json  sidebars.ts  wrangler.jsonc
docs-site/: .gitignore  docusaurus.config.ts  package.json  sidebars.ts
docs-site/docs/: arrow-schema.md  core.md  design-pure-rust.md  format-detection.md  install.md  quickstart-cli.md  quickstart-python.md  vendor-bruker.md  vendor-thermo.md  vendor-waters.md
docs/docs/: arrow-schema.md  conformance.md  core.md  design-architecture.md  design-crates.md  design-pure-rust.md  format-detection.md  install.md  intro.md  parity.md  quickstart-cli.md  quickstart-python.md  quickstart-rust.md  vendor-agilent.md  vendor-bruker.md  vendor-sciex.md  vendor-shimadzu.md  vendor-waters.md
docs/src/: vendor-bruker.md  vendor-thermo.md
python/: README.md  pyproject.toml
python/openmassspec/: __init__.py
python/openproteo/: __init__.py
python/tests/: test_metapackage.py
scripts/: check-release-ready.sh  fetch_corpus.py  release-stack.sh  truthtest-speclance.sh
