[workspace]
resolver = "2"
members = [
    "crates/openmassspec-io",
    "crates/openmassspec-io-cli",
    "crates/openmassspec-io-py",
]

[workspace.package]
version = "1.2.0"
edition = "2021"
rust-version = "1.87"
authors = ["Nathan Riley <git@nathanriley.com>"]
license = "Apache-2.0"
repository = "https://github.com/Sigilweaver/OpenMassSpec"
homepage = "https://sigilweaver.app/openmassspec/"
documentation = "https://sigilweaver.app/openmassspec/docs/"

[workspace.dependencies]
openmassspec-core = "1.1.0"
opentfraw = "1.3.1"
opentimstdf = "1.2.3"
openwraw = "1.2.2"
openaraw = "0.1.0"
opensxraw = "0.1.0"

[workspace.lints.rust]
unsafe_code = "forbid"
