[workspace]
resolver = "2"
members = [
    "crates/openmassspec-io",
    "crates/openmassspec-io-cli",
    "crates/openmassspec-io-py",
]

[workspace.package]
version = "1.5.0"
edition = "2021"
rust-version = "1.88"
authors = ["Nathan Riley <git@nathanriley.com>"]
license = "Apache-2.0"
repository = "https://github.com/Sigilweaver/OpenMassSpec"
homepage = "https://sigilweaver.app/openmassspec/"
documentation = "https://sigilweaver.app/openmassspec/docs/"

[workspace.dependencies]
openmassspec-core = "1.2.0"
opentfraw = "1.3.4"
opentimstdf = "1.3.0"
openwraw = "1.2.5"
openaraw = "0.1.2"
opensxraw = "0.2.1"
openszraw = "0.1.0"

[workspace.lints.rust]
unsafe_code = "forbid"
