[workspace]
resolver = "2"
members = [
    "crates/openmassspec-io",
    "crates/openmassspec-io-cli",
    "crates/openmassspec-io-py",
]

[workspace.package]
version = "1.5.2"
edition = "2021"
rust-version = "1.88"
authors = ["Nathan Riley <git@nathanriley.com>"]
license = "Apache-2.0"
repository = "https://github.com/Sigilweaver/OpenMassSpec"
homepage = "https://sigilweaver.app/openmassspec/"
documentation = "https://sigilweaver.app/openmassspec/docs/"

[workspace.dependencies]
openmassspec-core = "1.2.0"
opentfraw = "1.3.5"
opentimstdf = "1.3.0"
openwraw = "1.2.6"
openaraw = "0.1.3"
opensxraw = "0.2.2"
openszraw = "0.1.1"

[workspace.lints.rust]
unsafe_code = "forbid"
