[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openmassspec"
version = "1.5.0"
description = "Open mass spectrometry: one install for the OpenMassSpec vendor reader stack (Thermo, Bruker, Waters, Agilent, SCIEX, Shimadzu)"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Nathan Riley", email = "git@nathanriley.com" }]
requires-python = ">=3.9"
keywords = [
    "mass-spectrometry",
    "proteomics",
    "raw",
    "thermo",
    "bruker",
    "waters",
    "tdf",
    "mzml",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = ["openmassspec-io"]

[project.optional-dependencies]
# The base install always brings openmassspec-io (the vendor-agnostic Rust
# reader), which has every vendor - including SCIEX and Shimadzu -
# compiled in, so reading and mzML conversion work for all supported
# formats out of the box. Each extra additionally installs the standalone
# per-vendor package for direct use.
thermo = ["opentfraw"]
bruker = ["opentimstdf"]
waters = ["openwraw"]
agilent = ["openaraw"]
sciex = ["opensxraw"]
shimadzu = ["openszraw"]
all = ["opentfraw", "opentimstdf", "openwraw", "openaraw", "opensxraw", "openszraw"]

[project.urls]
Homepage = "https://github.com/Sigilweaver/OpenMassSpec"
Documentation = "https://github.com/Sigilweaver/OpenMassSpec"
Source = "https://github.com/Sigilweaver/OpenMassSpec"
Issues = "https://github.com/Sigilweaver/OpenMassSpec/issues"

[tool.setuptools]
packages = ["openmassspec"]
package-dir = { "" = "." }
license-files = ["LICENSE"]
