[package]
name = "openmassspec-io-cli"
version.workspace = true
description = "vendor2mzml: convert Thermo / Bruker / Waters / Agilent / SCIEX / Shimadzu raw acquisitions to mzML."
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "vendor2mzml"
path = "src/main.rs"

[dependencies]
openmassspec-core = { workspace = true }
openmassspec-io = { path = "../openmassspec-io", features = ["all"] }
clap = { version = "4.5", features = ["derive"] }
flate2 = "1.0"
mzdata = { version = "0.63.5", default-features = false, features = ["mzml"] }

[lints]
workspace = true
