[package]
name = "openmassspec-io-py"
version.workspace = true
description = "Python bindings (PyO3) for openmassspec-io: vendor-neutral mass-spec I/O with mzML conversion and Arrow streaming."
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["mass-spectrometry", "mzml", "proteomics", "pyo3"]
categories = ["science", "encoding", "api-bindings"]
publish = false

[lib]
name = "_openmassspec_io"
crate-type = ["cdylib"]

[features]
default = ["arrow"]
arrow = ["openmassspec-io/arrow", "openmassspec-core/arrow", "dep:arrow"]

[dependencies]
openmassspec-core = { workspace = true }
openmassspec-io = { path = "../openmassspec-io", features = ["all"] }
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py39"] }
numpy = "0.28"
arrow = { version = "58", features = ["pyarrow"], optional = true }

[lints]
workspace = true
