[package]
name = "openmassspec-io"
version.workspace = true
description = "Vendor-neutral mass-spec I/O: feature-gated re-exports of opentfraw / opentimstdf / openwraw / openaraw / opensxraw / openszraw with auto-detection and an mzML writer."
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
keywords = ["mass-spectrometry", "mzml", "proteomics", "thermo", "bruker"]
categories = ["science", "encoding"]

[features]
default = []
all = ["thermo", "bruker", "waters", "agilent", "sciex", "shimadzu"]
thermo = ["dep:opentfraw"]
bruker = ["dep:opentimstdf"]
waters = ["dep:openwraw"]
agilent = ["dep:openaraw"]
sciex = ["dep:opensxraw"]
shimadzu = ["dep:openszraw"]
arrow = ["openmassspec-core/arrow"]

[dependencies]
openmassspec-core = { workspace = true }
opentfraw = { workspace = true, optional = true }
opentimstdf = { workspace = true, optional = true }
openwraw = { workspace = true, optional = true }
openaraw = { workspace = true, optional = true }
opensxraw = { workspace = true, optional = true }
openszraw = { workspace = true, optional = true }
thiserror = "2"

[lints]
workspace = true
