[package]
name = "openproteo-io-cli"
version = "1.0.0"
description = "vendor2mzml: convert Thermo / Bruker / Waters raw acquisitions to mzML."
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "vendor2mzml"
path = "src/main.rs"

[dependencies]
openproteo-core = { workspace = true }
openproteo-io = { path = "../openproteo-io", features = ["all"] }
clap = { version = "4.5", features = ["derive"] }
flate2 = "1.0"
mzdata = { version = "0.63.5", default-features = false, features = ["mzml"] }

[lints]
workspace = true
