[package]
name = "openproteo-io"
version = "1.0.1"
description = "Vendor-neutral mass-spec I/O: feature-gated re-exports of opentfraw / opentimstdf / openwraw with auto-detection and an mzML writer."
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
keywords = ["mass-spectrometry", "mzml", "proteomics", "thermo", "bruker"]
categories = ["science", "encoding"]

[features]
default = []
all = ["thermo", "bruker", "waters"]
thermo = ["dep:opentfraw"]
bruker = ["dep:opentimstdf"]
waters = ["dep:openwraw"]
arrow = ["openproteo-core/arrow"]

[dependencies]
openproteo-core = { workspace = true }
opentfraw = { workspace = true, optional = true }
opentimstdf = { workspace = true, optional = true }
openwraw = { workspace = true, optional = true }
thiserror = "2"

[lints]
workspace = true
